--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
-  "lerna": "2.11.0",
   "version": "1.0.0-beta.9",
   "npmClient": "yarn",
-  "useWorkspaces": true
+  "packages": [
+    "packages/*"
+  ],
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json"
 }
