--- a/packages/rbac-postgres/package.json
+++ b/packages/rbac-postgres/package.json
@@ -15,22 +15,22 @@
     "scripts": {
         "clean": "rm -rf dist",
         "build": "rollup -c rollup.config.js",
-        "test": "mocha --exit"
+        "test": "mocha"
     },
     "dependencies": {
         "@brainstaff/rbac": "^1.0.0-beta.10"
     },
     "devDependencies": {
         "chai": "^4.1.2",
-        "knex": "^0.16.3",
+        "knex": "^0.21.1",
         "mocha": "^5.2.0",
-        "objection": "^1.4.0",
-        "pg": "^7.6.1",
+        "objection": "^2.1.3",
+        "pg": "^8.0.3",
         "rollup": "^0.62.0"
     },
     "peerDependencies": {
-        "knex": "^0.16.3",
-        "objection": "^1.4.0",
-        "pg": "^7.6.1"
+        "knex": "^0.21.1",
+        "objection": "^2.1.3",
+        "pg": "^8.0.3"
     }
 }
