--- a/packages/rbac/package.json
+++ b/packages/rbac/package.json
@@ -14,11 +14,11 @@
     },
     "scripts": {
         "clean": "rm -rf dist",
-        "build": "rollup -c rollup.config.js",
+        "build": "rollup -c rollup.config.mjs",
         "test": "mocha"
     },
     "devDependencies": {
         "mocha": "^10.8.2",
-        "rollup": "^0.62.0"
+        "rollup": "^4.24.4"
     }
 }
