--- a/packages/rbac-mongodb/package.json
+++ b/packages/rbac-mongodb/package.json
@@ -14,7 +14,7 @@
     },
     "scripts": {
         "clean": "rm -rf dist",
-        "build": "rollup -c rollup.config.js",
+        "build": "rollup -c rollup.config.mjs",
         "test": "mocha"
     },
     "dependencies": {
@@ -24,7 +24,7 @@
         "chai": "^4.1.2",
         "mocha": "^10.8.2",
         "mongoose": "^5.2.3",
-        "rollup": "^0.62.0"
+        "rollup": "^4.24.4"
     },
     "peerDependencies": {
         "mongoose": "^5.2.3"
