--- a/packages/rbac-postgres/package.json
+++ b/packages/rbac-postgres/package.json
@@ -14,7 +14,7 @@
     },
     "scripts": {
         "clean": "rm -rf dist",
-        "build": "rollup -c rollup.config.js",
+        "build": "rollup -c rollup.config.mjs",
         "test": "mocha"
     },
     "dependencies": {
@@ -26,7 +26,7 @@
         "mocha": "^10.8.2",
         "objection": "^2.1.3",
         "pg": "^8.0.3",
-        "rollup": "^0.62.0"
+        "rollup": "^4.24.4"
     },
     "peerDependencies": {
         "knex": "^0.21.1",
