--- a/packages/rbac-http/package.json
+++ b/packages/rbac-http/package.json
@@ -15,15 +15,13 @@
     "scripts": {
         "clean": "rm -rf dist",
         "build": "rollup -c rollup.config.mjs",
-        "test": "mocha --recursive --require babel-core/register"
+        "test": "mocha"
     },
     "dependencies": {
         "@brainstaff/rbac": "^1.0.0-beta.10",
         "axios": "^0.18.0"
     },
     "devDependencies": {
-        "babel-core": "^6.26.3",
-        "babel-preset-env": "^1.7.0",
         "express": "^4.16.3",
         "mocha": "^10.8.2",
         "rollup": "^4.24.4"
