--- a/packages/rbac-http/package.json
+++ b/packages/rbac-http/package.json
@@ -15,7 +15,7 @@
     "scripts": {
         "clean": "rm -rf dist",
         "build": "rollup -c rollup.config.mjs",
-        "test": "mocha"
+        "test": "mocha -r tsx ./test/test.ts"
     },
     "dependencies": {
         "@brainstaff/rbac": "^1.0.0-beta.10",
@@ -23,9 +23,13 @@
     },
     "devDependencies": {
         "@rollup/plugin-typescript": "^12.1.1",
+        "@types/express": "^5.0.0",
+        "@types/mocha": "^10.0.9",
+        "@types/node": "^22.9.0",
         "express": "^4.21.1",
         "mocha": "^10.8.2",
         "rollup": "^4.24.4",
+        "tsx": "^4.19.2",
         "typescript": "^5.6.3"
     }
 }
