--- a/packages/rbac/package.json
+++ b/packages/rbac/package.json
@@ -15,12 +15,15 @@
     "scripts": {
         "clean": "rm -rf dist",
         "build": "rollup -c rollup.config.mjs",
-        "test": "mocha"
+        "test": "mocha -r tsx ./test/test.ts"
     },
     "devDependencies": {
         "@rollup/plugin-typescript": "^12.1.1",
+        "@types/mocha": "^10.0.9",
+        "@types/node": "^22.9.0",
         "mocha": "^10.8.2",
         "rollup": "^4.24.4",
+        "tsx": "^4.19.2",
         "typescript": "^5.6.3"
     }
 }
