--- a/packages/rbac-http/package.json
+++ b/packages/rbac-http/package.json
@@ -23,6 +23,7 @@
     },
     "devDependencies": {
         "@rollup/plugin-typescript": "^12.1.1",
+        "@tsconfig/node18": "^18.2.4",
         "@types/express": "^5.0.0",
         "@types/mocha": "^10.0.9",
         "@types/node": "^22.9.0",
