--- a/packages/rbac-in-memory/package.json
+++ b/packages/rbac-in-memory/package.json
@@ -22,6 +22,7 @@
     },
     "devDependencies": {
         "@rollup/plugin-typescript": "^12.1.1",
+        "@tsconfig/node18": "^18.2.4",
         "@types/mocha": "^10.0.9",
         "@types/node": "^22.9.0",
         "mocha": "^10.8.2",
