--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "lerna run clean",
     "build": "lerna run build",
     "test": "lerna run test",
+    "pipe": "yarn check ${0:-} && yarn clean ${0:-} && yarn build ${0:-} && yarn test ${0:-}",
     "publish-all": "lerna run clean && lerna run build && lerna publish --git-remote origin"
   },
   "workspaces": [
