Allow to customize ports.

--- a/packages/rbac-mongodb/package.json
+++ b/packages/rbac-mongodb/package.json
@@ -17,7 +17,7 @@
         "check": "tsc --noEmit",
         "clean": "rm -rf dist",
         "build": "rollup -c rollup.config.mjs",
-        "test": "mocha -r tsx ./test/test.ts"
+        "test": "node --env-file=../../.env ../../node_modules/mocha/bin/mocha -r tsx ./test/test.ts"
     },
     "dependencies": {
         "@brainstaff/rbac": "^1.0.0-beta.11"
