--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - mongo:/data/db
     ports:
-      - 27017:27017
+      - $MONGO_PORT:27017
     container_name: brainstaff_mongo
     restart: unless-stopped
   postgres:
@@ -19,7 +19,7 @@ services:
     volumes:
       - postgres:/var/lib/postgresql/data
     ports:
-      - 5432:5432
+      - $POSTGRES_PORT:5432
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
