--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,8 @@
 language: node_js
 node_js:
   - "20"
-before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.7.0
-  - export PATH="$HOME/.yarn/bin:$PATH"
-install:
-  - yarn install
-  - yarn lerna bootstrap
 script:
-  - yarn lerna run clean
-  - yarn lerna run build
-  - yarn lerna run test
+  - npm run pipe
 services:
   - mongodb
   - postgresql
